--- a/res/values/bools.xml
+++ b/res/values/bools.xml
@@ -35,4 +35,9 @@
 
     <!-- Whether to show a preference item for mobile plan -->
     <bool name="config_show_mobile_plan">true</bool>
+   <!-- Whether to show a check box or switch for manual provision -->
+   <bool name="config_custom_multi_sim_checkbox">false</bool>
+
+    <!-- Whether notify user that switch data service -->
+    <bool name="confirm_to_switch_data_service">false</bool>
 </resources>
