--- a/res/values/custom_attrs.xml
+++ b/res/values/custom_attrs.xml
@@ -16,8 +16,8 @@
     <declare-styleable name="SeekBarPreference">
         <attr name="defaultVal" format="integer" />
         <attr name="minimum" format="integer" />
-        <attr name="unitsLeft" format="string|reference" />
-        <attr name="unitsRight" format="string|reference" />
+        <attr name="unitsLeft" format="string" />
+        <attr name="unitsRight" format="string" />
         <attr name="interval" format="integer" />
     </declare-styleable>
 
